# FFBB-MCP-Server

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  bench.py  bench2.py  bench3.py  code_review_request.md  evaluation.xml  fetch_matches.py  mypy_test.py  patch_match_team.patch  patch_normalize.patch  pyproject.toml  reproduce_issue.py  smithery.yaml  test_equipes.py  test_equipes_u11m1.py  test_jav.py  test_jav2.py  test_jav3.py  test_jav_classement.py  test_jav_team_summary.py  test_meili.py  test_perf.py  test_poule.py  test_prompts_exported.py  update_services.py
.agent/skills/brainstorming/: SKILL.md
.agent/skills/karpathy-principles/: SKILL.md
.agent/skills/python-clean-architecture/: SKILL.md
.githooks/: pre-commit  pre-push
.github/workflows/: benchmark.yml  bump-ffbb-client.yml  ci.yml  deploy-pages.yml  publish.yml  tests.yml
.jules/: bolt.md
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  COOLIFY_DEPLOYMENT.md  EXAMPLES.md  PERFORMANCE.md  TOOLS_REFERENCE.md  rules_ffbb.md
src/ffbb_mcp/: __init__.py  __main__.py  _state.py  acronyms_cache.json  aliases.py  app_factory.py  cache_strategy.py  client.py  dashboard.py  http_routes.py  metrics.py  models.py  prompts.py  resources.py  schemas.py  server.py  services.py  services.py.orig  utils.py
tests/: conftest.py  test_audit_feedback.py  test_cache_config.py  test_feature_ranking_auto.py  test_ffbb_club_auto_res.py  test_phase.py  test_prompts.py  test_server.py  test_services.py  test_tools_unit.py  test_utils.py
tools/: measure_services.py  profile_services.py  sync_version.py  update_website_meta.py
tools/skill_router/: README.md  __init__.py  router.py
website/: index.html  robots.txt  sitemap.xml
website/css/: style.css
