[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ffbb-mcp"
version = "0.3.1"
description = "MCP Server for FFBB (Fédération Française de Basketball) data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.8.0",
    "ffbb-api-client-v3 @ git+https://github.com/nickdesi/FFBBApiClientV3.git@ccd6da2",
    "anysqlite>=0.0.5",
    "uvicorn",
    "starlette",
    "fastapi",
    "pydantic>=2.12.5",
    "cachetools>=5.3.0",
]

[project.urls]
Homepage = "https://github.com/nickdesi/FFBB-MCP-Server"
Repository = "https://github.com/nickdesi/FFBB-MCP-Server"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
ffbb-mcp = "ffbb_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".agent",
    ".git",
    ".venv",
    ".mypy_cache",
    ".ruff_cache",
    "FFBBApiClientV3_Ref",
    "external",
    "external/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
